src/test/examples/custom/invalid/semanticErr/fullPairTypes/invalidAssign.wacc
# Invalid assignment to a nested pair

# Exit:
# 200

# Program:

begin
  pair(int, bool) a = newpair (1, true);
  pair(char, string) b = newpair ('a', "Hello");
  pair(pair, pair) c = newpair (a, b);

  # fst c will have type pair(int, bool)
  fst c = b;

  # snd c will have type pair(char, string)
  snd c = a
end
